    - Disabled gmond plugin and removed build-dependency on libganglia1-dev -
      versions >= 3 are not available on Etch.
    - Disabled memcachec plugin and removed build-dependency on
      libmemcached-dev, which is not available on Etch.
    - Disabled curl_json plugin and removed build-dependency on libyajl-dev,
      which is not available on Etch.

 -- Sebastian Harl <tokkee@debian.org>  Mon, 11 Jan 2010 18:42:25 +0100

collectd (4.8.2-1) unstable; urgency=medium

  * New upstream release:
    - Now using libtool 2.
  * Set urgency to medium because of the fix for #559801.
  * Split the "collectd" binary package into "collectd-core" and "collectd".
    The former provides the main program file and the plugins while the latter
    provides the configuration. This allows for much more flexible setups
    (e.g. providing customizations on top of "collectd-core" without modifying
    the "collectd" package) and, amongst others, removes the hard dependency
    on librrd (Closes: #495936, #544311).
  * debian/collectd-core.collectd.init.d:
    - Do not (try to) start collectd if the config file does not exist. Else,
      installation of "collectd-core" (which does not provide configuration)
      would fail.
  * debian/collectd.postinst:
    - Let the "collectd" package restart the daemon, since it provides the
      config file.
  * debian/collectd.links:
    - Symlink /u/s/d/collectd/examples to /u/s/d/collectd-core/examples.
  * debian/control:
    - Build-depend on the right combination of libsnmp-dev and perl. Perl's
      CFLAGS (included in net-snmp's CFLAGS) introduced '-fstack-protector' in
      version 5.10.1 on some architectures (those supporting that features).
      net-snmp has been fixed to handle that correctly in 5.4.2.1~dfsg-4;
      thanks to Lamont Jones and Dann Frazier for reporting this
      (Closes: #559087).
    - Build-depend on libsensors4-dev rather than libsensors-dev. libsnmp-dev,