@@ -10,7 +10,6 @@ usr/share/man/man3/Collectd::Unixsock.3pm
 usr/share/man/man5/collectd-unixsock.5
 usr/share/man/man5/collectd-email.5
 usr/share/man/man5/collectd-exec.5
-usr/share/man/man5/collectd-java.5
 usr/share/man/man5/collectd.conf.5
 usr/share/man/man5/collectd-snmp.5
 usr/share/man/man5/collectd-perl.5
