@@ -51,7 +51,6 @@ LoadPlugin interface
 #LoadPlugin iptables
 #LoadPlugin ipvs
 LoadPlugin irq
-#LoadPlugin java
 #LoadPlugin libvirt
 LoadPlugin load
 #LoadPlugin madwifi
@@ -242,16 +241,6 @@ LoadPlugin users
 #	Irq 8
 #	Irq 9
 #	IgnoreSelected true
-#</Plugin>
-
-#<Plugin java>
-#	JVMArg "-verbose:jni"
-#
-#	LoadPlugin "org.collectd.java.GenericJMX"
-#	<Plugin "GenericJMX">
-#		# See /usr/share/doc/collectd/examples/GenericJMX.conf
-#		# for an example config.
-#	</Plugin>
 #</Plugin>
 
 #<Plugin libvirt>
